# amplifier-bundle-chat-completions

./: README.md  SUPPORT.md  bundle.md
behaviors/: chat-completions.yaml
context/: provider-instructions.md
modules/provider-chat-completions/: pyproject.toml
modules/provider-chat-completions/amplifier_module_provider_chat_completions/: __init__.py
modules/provider-chat-completions/tests/: test_integration.py  test_provider.py
tests/: test_bundle_structure.py
