[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-module-provider-chat-completions"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
]

[project.entry-points."amplifier.modules"]
provider-chat-completions = "amplifier_module_provider_chat_completions:mount"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "amplifier-core>=1.3.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
